--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+:root{
+  --primary: hsl(0, 0%, 100%);
+  --lightGray: hsl(217, 12%, 63%);
+  --darkGrey: hsl(216, 12%, 54%);
+  --blueIsh: hsl(213, 19%, 18%);
+  --darkBlue: hsl(216, 12%, 8%);
+  --orange:hsl(25, 97%, 53%);
+}
 html {
+   font-family: 'Overpass', sans-serif;
 	box-sizing: border-box;
 	color: white;
 }
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #242424;
+	background-color: var(--darkBlue);
 }
 section {
 	display: flex;
@@ -20,9 +29,9 @@ section {
 .form__container_thanks {
 	display: flex;
 	align-content: space-between;
-	width: 510px;
+	width: 500px;
 	height: 510px;
-	background: linear-gradient(#303641, #161b24);
+	background: linear-gradient(#303641, var(--blueIsh));
 	border-radius: 40px;
 }
 .form__wrap,
@@ -41,8 +50,9 @@ section {
 	width: 22px;
 	height: 22px;
 	border-radius: 50%;
-	background-color: #3d44508c;
+	background-color: #333b46;
 	padding: 20px;
+   
 }
 
 h1 {
@@ -52,7 +62,7 @@ h1 {
 }
 p {
 	margin: 20px 0 0;
-	font-size: 18px;
+	font-size: 15px;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	line-height: 1.6;
 	color: #b9b9b9;
@@ -75,7 +85,7 @@ p {
 	transition: all 0.15s ease-in;
 }
 .form__rating_number:hover {
-	background-color: #ff8800;
+	background-color: var(--orange);
 	color: white;
 }
 button {
@@ -86,9 +96,7 @@ button {
 	letter-spacing: 3px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: 600;
-	background-color: #ff8800;
-	color: white;
-	background-color: #ff8800;
+	background-color: var(--orange);
 	color: white;
 	border: none;
 	font-size: 18px;
@@ -97,7 +105,7 @@ button {
 }
 button:hover {
 	background-color: white;
-	color: #ff8800;
+	color: var(--orange);
 }
 .active {
 	color: #e4e4e4;
@@ -123,7 +131,7 @@ button:hover {
 	padding: 5px 26px;
 	font-size: 19px;
 	height: 30px;
-	color: #ff8800;
+	color: var(--orange);
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: 400;
 	border-radius: 25px;
@@ -186,7 +194,7 @@ button:hover {
 		padding: 7px 16px;
 		font-size: 16px;
 		height: 22px;
-		color: #ff8800;
+		color: var(--orange);
 		font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 		font-weight: 400;
 		border-radius: 25px;
